libycp/testsuite/tests/isnil.err
[Scanner] tests/isnil.ycp:4 Syntax error: Warning: use 'x == nil' instead of isnil(x)
[Scanner] tests/isnil.ycp:7 Syntax error: Warning: use 'x == nil' instead of isnil(x)
Parsed:
----------------------------------------------------------------------
{
  integer `v_integer = nil;
  integer `w_integer = 5;
  return [v_integer == nil, v_integer == nil, v_integer != nil, w_integer == nil, w_integer == nil, w_integer != nil];
}
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
{
  integer `v_integer = nil;
  return [v_integer == nil, v_integer != nil];
}
----------------------------------------------------------------------
[Scanner] tests/isnil.ycp:19 Syntax error: isnil can only check symbols
