libycp/testsuite/tests/isnil.ycp
{
  integer v_integer = nil;
  integer w_integer = 5;
  return [isnil (v_integer),
	 (v_integer == nil),
	 (v_integer != nil),
	 isnil (w_integer),
	 (w_integer == nil),
	 (w_integer != nil)
	];
}
{
  // allowed
  integer v_integer = nil;
  return [v_integer == nil, v_integer != nil];
}
{
  // syntax error
  return isnil (nil);
}
